--- a/app/src/androidMain/res/values/strings.xml
+++ b/app/src/androidMain/res/values/strings.xml
@@ -8,5 +8,5 @@
     <string name="reblogged_your_post">reblogged your post</string>
     <string name="followed_you">followed you</string>
     <string name="latest_image_widget_description">have a look at the newest post from your home timeline, right on your homescreen</string>
-    <string name="notification_widget_description">Stay updated with your latest notifications from Pixelfed right on your home screen</string>
+    <string name="notification_widget_description">Stay updated with your latest notifications from Dishu right on your home screen</string>
 </resources>
